添加bI首页及操作日志搜索功能

--- a/html/biTemplet.html
+++ b/html/biTemplet.html
@@ -46,13 +46,13 @@
         </dl>
     </div>
     <div class="demand_main" id="demand_list">
-        <!--<dl class="new_demand">-->
-            <!--<dt><img src="../images/wendang_moren.png"></dt>-->
-            <!--<dd>-->
-                <!--<p>dsfdsfds</p>-->
-                <!--<span>dfsdfsd</span>-->
-            <!--</dd>-->
-        <!--</dl>-->
+        <!--<dl class="new_demand">
+            <dt><img src="../images/wendang_moren.png"></dt>
+            <dd>
+                <p>dsfdsfds</p>
+                <span>dfsdfsd</span>
+            </dd>
+        </dl>-->
     </div>
 
     <script src="../plugin/jQuery/jquery.min.js"></script>
