--- a/index.html
+++ b/index.html
@@ -206,51 +206,54 @@
 		<!--数据源配置-->
 		<div class="data-source-config modal">
 			<h3>数据源配置<img src="images/icon_guanbi.png" alt="" class="fr"/></h3>
-			<ul class="da-source-type clearfix">
-				<li class="fl">
-						<img src="images/icon_circle_on.png" alt="" />
-						<input type="radio" name="da" checked="true"/>
-						<span>原始数据表</span>
-					</li>
-					<li class="fr">
-						<img src="images/icon_circle.png" alt="" />
-						<input type="radio" name="da"/>
-						<span>ETL数据表</span>
-					</li>
-			</ul>
+			<!--<ul class="da-source-type clearfix">-->
+				<!--<li class="fl">-->
+						<!--<img src="images/icon_circle_on.png" alt="" />-->
+						<!--<input type="radio" name="da" checked="true"/>-->
+						<!--<span>原始数据表</span>-->
+					<!--</li>-->
+					<!--<li class="fr">-->
+						<!--<img src="images/icon_circle.png" alt="" />-->
+						<!--<input type="radio" name="da"/>-->
+						<!--<span>ETL数据表</span>-->
+					<!--</li>-->
+			<!--</ul>-->
 			<div class="da-source-origin">
 				<ul>
 					<li>
-						<span>数据源：</span>
+						<span>数据源类型：</span>
 						<div class="da-sele-box">
-							<select name="" id="">
-								<option value="数据0">数据0</option>
-								<option value="数据1">数据1</option>
+							<select name="" id="db_type">
+								<option value="mysql">mysql</option>
 							</select>
 							<i class="fa fa-caret-down"></i>
 						</div>
 					</li>
-					<li>
-						<span>数据库：</span>
-						<div class="da-sele-box">
-							<select name="" id="">
-								<option value="数据库0">数据库0</option>
-								<option value="数据库1">数据库1</option>
-							</select>
-							<i class="fa fa-caret-down"></i>
-						</div>
-					</li>
+					<!--<li>-->
+						<!--<span>数据库：</span>-->
+						<!--<div class="da-sele-box">-->
+							<!--<select name="" id="">-->
+								<!--<option value="数据库0">数据库0</option>-->
+								<!--<option value="数据库1">数据库1</option>-->
+							<!--</select>-->
+							<!--<i class="fa fa-caret-down"></i>-->
+						<!--</div>-->
+					<!--</li>-->
 				</ul>
 				<div class="da-source-account">
-					<p>账号：<span>231456</span></p>
-					<p>密码：<span>231456</span></p>
-					<p>端口：<span>2314</span></p>
+					<p><label>显示名称：</label><input class="db_name" type="text" placeholder="请输入名称" /></p>
+                    <p><label>数据库地址：</label><input class="db_site" type="text" placeholder="请输入数据库地址"/></p>
+                    <p><label>端口：</label><input class="db_port" type="text" onkeyup="this.value=this.value.replace(/[^\d]/g,'') " onafterpaste="this.value=this.value.replace(/[^\d]/g,'') " placeholder="只能输入数字" /></p>
+                    <p><label>数据库：</label><input class="db_database" type="text" placeholder="请输入数据库"/></p>
+                    <p><label>用户名：</label><input class="db_user" type="text" placeholder="请输入用户名"/></p>
+                    <p><label>密码：</label><input class="db_password" type="text" placeholder="请输入密码"/></p>
 				</div>
 			</div>
 			<div class="file-btns-col mcenter">
 				<span>
-					<button>确定</button>
-					<button>取消</button>
+					<button class="addBtn">添加</button>
+                    <button class="linkBtn">链接测试</button>
+					<button class="closeBtn">关闭</button>
 				</span>
 			</div>
 		</div>
