添加页面流部分功能

--- a/html/pageFlow.html
+++ b/html/pageFlow.html
@@ -9,10 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../plugin/font-awesome-4.7.0/css/font-awesome.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
-    <link rel="stylesheet" href="../plugin/basicContext/basicContext.min.css" />
-    <link rel="stylesheet" href="../plugin/basicContext/default.min.css" />
+    <link rel="stylesheet" href="../plugin/layer/skin/default/layer.css" />
     <link rel="stylesheet" href="../css/form.css" />
     <link rel="stylesheet" href="../css/page.css" />
     <!--[if lt IE 9]>
@@ -25,19 +22,10 @@
 		<div class="edit-state">
 			<div class="top-bar clearfix">
 				<img src="../images/icon_save.png" alt="" />
-				<img src="../images/icon_copy.png" alt="" />
-				<img src="../images/icon_paste.png" alt="" />
-				<img src="../images/icon_move.png" alt="" />
-				<img src="../images/icon_preview.png" alt="" />
-				<img src="../images/icon_temp.png" alt="" />
-				<img src="../images/delete_01.png" alt="" />
 				<img src="../images/icon_prev.png" alt="" />
 				<img src="../images/icon_next.png" alt="" />
 				<img src="../images/icon_fresh.png" alt="" />
-				<img src="../images/icon_new.png" alt="" />
-				<img src="../images/bianji_01.png" alt="" />
-				<img src="../images/icon_set.png" alt="" />
-				<img src="../images/icon_link.png" alt="" />
+				<img src="../images/icon_preview.png" alt="" />
 			</div>
 			<div class="drag-bar clearfix">
 				<div class="op-box1 op-box"></div>
@@ -134,12 +122,7 @@
 	</div>
 		</div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
-   	<script src="../plugin/validate/jquery.validate.min.js"></script>
-    <script src="../plugin/validate/messages_zh.min.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script src="../plugin/basicContext/basicContext.min.js"></script>
-    <script src="../plugin/zSize/jquery_zsize.js"></script>
-    <script src="../js/todo.js"></script>
+    <script src="../plugin/layer/layer.js"></script>
     <script src="../js/page.js"></script>
   </body>
 </html>
