--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>首页</title>
+    <title>小道大数据平台</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="plugin/font-awesome-4.7.0/css/font-awesome.css" />
-    <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">-->
-    <!--<link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">-->
     <link rel="stylesheet" href="plugin/zTree/css/zTreeStyle/zTreeStyle.css" />
     <link rel="stylesheet" href="plugin/basicContext/basicContext.min.css" />
     <link rel="stylesheet" href="plugin/basicContext/default.min.css" />
@@ -72,7 +70,7 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage1" src="html/menuSet.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
+								<iframe id="iframepage1" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
 					</div>
