--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -107,13 +107,13 @@
 								<div class="m-cont-box3">
 									<span>上传Logo</span>
 									<div class="m-uploadimg-box">
-										<div class="m-uploadimg">
+										<form class="m-uploadimg">
 											<img src="../images/c_img.png" alt="" />
 											<input type="file" />
 											<a href="javascript:;">删除</a>
 											<a href="javascript:;">点击上传</a>
 											<p>图片的尺寸为640*640，大小不超过1M</p>
-										</div>
+										</form>
 									</div>
 								</div>
 								<div class="m-cont-box4">
