--- a/plugin/webContent/groups/groups.html
+++ b/plugin/webContent/groups/groups.html
@@ -135,11 +135,20 @@
         -moz-border-radius: 2px;
         border-radius: 2px;
     }
+    .ensure_load{
+        display: inline-block;
+        padding: 4px 8px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background: #038DFF;
+        color: #fff;
+        cursor: pointer;
+    }
 
 </style>
 <div class="ensure">
-    <span class="ensure_save saveActionComp"></span>
-    <span class="ensure_create generateSql"></span>
+    <span class="ensure_load saveActionComp">保存</span>
+    <span class="ensure_load generateSql">生成SQL</span>
 
 </div>
 <div class="fromInp" style="margin-top: 44px;">
