--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -8,25 +8,28 @@
         }
         .ensure_load{
             display: inline-block;
-            padding: 4px 5px;
+            padding: 4px 8px;
             border: 1px solid #ccc;
-            border-radius: 2px;
-        }
-        .ensure_save{
-            display: inline-block;
-            height: 12px;
-            width: 12px;
-            background: url(../../../images/save.png) no-repeat center;
+            border-radius: 5px;
+            background: #038DFF;
+            color: #fff;
             cursor: pointer;
         }
-        .ensure_create{
-            display: inline-block;
-            margin-left: 12px;
-            height: 12px;
-            width: 12px;
-            background: url(../../../images/shengchengSQL.png) no-repeat center;
-            cursor: pointer;
-        }
+        /*.ensure_save{*/
+            /*display: inline-block;*/
+            /*height: 12px;*/
+            /*width: 12px;*/
+            /*background: url(../../../images/save.png) no-repeat center;*/
+            /*cursor: pointer;*/
+        /*}*/
+        /*.ensure_create{*/
+            /*display: inline-block;*/
+            /*margin-left: 12px;*/
+            /*height: 12px;*/
+            /*width: 12px;*/
+            /*background: url(../../../images/shengchengSQL.png) no-repeat center;*/
+            /*cursor: pointer;*/
+        /*}*/
         .fromInp {
             margin: 0 12px 14px;
             
@@ -77,9 +80,9 @@
 
     <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
         <div class="ensure">
-            <span class="ensure_load loadParguet">上传数据源</span>
-            <span class="ensure_save saveActionComp"></span>
-            <span class="ensure_create generateSql"></span>
+            <span class="ensure_load loadParguet">上传源数据</span>
+            <span class="ensure_load saveActionComp">保存</span>
+            <span class="ensure_load generateSql">生成SQL</span>
 
         </div>
         <div class="fromInp" style="margin-top: 44px;">
