--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -97,11 +97,21 @@
             color: #3d5275;
             padding: 20px 0 10px 12px;
         }
+        .ensure_load{
+            display: inline-block;
+            padding: 4px 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background: #038DFF;
+            color: #fff;
+            cursor: pointer;
+        }
     </style>
 
     <div class="ensure">
-        <span class="ensure_save saveActionComp"></span>
-        <span class="ensure_create generateSql"></span>
+        <span class="ensure_load">另存为模板</span>
+        <span class="ensure_load saveActionComp">保存</span>
+        <span class="ensure_load generateSql">生成SQL</span>
 
     </div>
     <div class="fromInp" style="margin-top: 44px;">
