--- a/plugin/webContent/sort/sort.html
+++ b/plugin/webContent/sort/sort.html
@@ -127,19 +127,20 @@
         -moz-border-radius: 2px;
         border-radius: 2px;
     }
-    .alias{
-        width: 100%;
-        height: 26px;
+    .ensure_load{
+        display: inline-block;
+        padding: 4px 8px;
         border: 1px solid #ccc;
-        -webkit-border-radius: 2px;
-        -moz-border-radius: 2px;
-        border-radius: 2px;
+        border-radius: 5px;
+        background: #038DFF;
+        color: #fff;
+        cursor: pointer;
     }
 
 </style>
 <div class="ensure">
-    <span class="ensure_save saveActionComp"></span>
-    <span class="ensure_create generateSql"></span>
+    <span class="ensure_load saveActionComp">保存</span>
+    <span class="ensure_load generateSql">生成SQL</span>
 
 </div>
 <div class="fromInp" style="margin-top: 44px;">
