--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -47,7 +47,7 @@
         height:800,
         toolBtns:["start round mix","end round mix","parallel","merge","decision","java","shell","spark"],
         haveHead:true,
-        headLabel:true,
+//        headLabel:true,
         initLabelText:'流程图',
         headBtns:["new","undo","redo","reload","print"],//如果haveHead=true，则定义HEAD区的按钮  "save",
         haveTool:true,
