--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -53,7 +53,7 @@
         height:800,
         toolBtns:["groups","sort","where","output","input","join"],
         haveHead:true,
-        headLabel:true,
+//        headLabel:true,
         initLabelText:'流程图',
         headBtns:["new","undo","redo","reload","print","save"],//如果haveHead=true，则定义HEAD区的按钮  "save",
         haveTool:true,
