添加日志搜索和导入

--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
 				</span>
 			</div>
 		</div>
+		<!--导入文件-->
+		<form id="import-form" class="import-file"  enctype="multipart/form-data">
+			<input type="file" id="import-file" name="file1" />
+		</form>
     <script src="plugin/jQuery/jquery.min.js"></script>
     <script src="plugin/zTree/jquery.ztree.all.min.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
