--- a/editBI.html
+++ b/editBI.html
@@ -16,107 +16,9 @@
     <link rel="stylesheet" href="plugin/layer/skin/default/layer.css" />
     <link rel="stylesheet" href="css/default.min.css" />
     <link rel="stylesheet" href="css/form.css" />
-    <style type="text/css">
+	  <!--D3绘图时需要用到的样式文件-->
+	  <link rel="stylesheet" href="css/BI_d3.css" />
 
-			/*图标部分样式*/
-			.axis path,
-			.axis line{
-				fill: none;
-				stroke: #000;
-				shape-rendering: crispEdges;
-			}
-			.line,.x_line{
-				fill: none;
-				stroke: rgb(0, 0, 0);
-				shape-rendering: crispEdges;
-			}
-			.axis path,
-			.axis line {
-				fill: none;
-				stroke: #000;
-				shape-rendering: crispEdges;
-			}
-			.bar {
-				fill: green;
-			}
-			.bar:hover {
-				fill: #ccc ;
-			}
-			.x.axis path {
-				display: none;
-			}
-			path {
-				stroke: #fff;
-				fill-rule: evenodd;
-			}
-			table{
-				width:98%;
-				height:100%;
-				margin: 0 auto;
-				border: 1px solid #e2e2e2;
-			}
-			table th,table td{
-				text-align: center;
-			}
-
-			/*	文本框样式	*/
-			.content-text{
-				width: 100%;
-				height: 100%;
-				padding: 10px;
-				box-sizing: border-box;
-			}
-			.content-text.active{
-				background-color: #fff;
-				position: relative;
-				z-index: 10;
-			}
-			.content-text>div{
-				width: 100%;
-				height: 100%;
-				word-wrap: break-word;
-				text-align: left;
-			}
-			.content-text>div i{
-				font-style:italic;
-			}
-			/*	按钮	*/
-			.content-button{
-				width: 100%;
-				height: 100%;
-			}
-			.content-button button{
-				width: 100%;
-				height: 100%;
-			}
-			.image-class
-			,.image-class img{
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-				box-sizing: border-box;
-			}
-
-			.hint,.tooltip{
-				border: 1px solid #ddd;
-				background-color: #fff;
-				min-width:100px;
-				text-align: center;
-				border-radius: 5px;
-				padding:10px;
-				color:#666;
-				position: absolute;
-				display: none;
-			}
-
-		.axis path,
-			.axis line {
-				fill: none;
-				stroke: #000;
-				shape-rendering: crispEdges;
-			}
-
-		</style>
     <!--[if lt IE 9]>
       <script src="common/html5shiv.min.js"></script>
       <script src="common/respond.min.js"></script>
