添加项目删除和重命名

--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -107,7 +107,7 @@
 								<div class="m-cont-box3">
 									<span>上传Logo</span>
 									<div class="m-uploadimg-box">
-										<form class="m-uploadimg">
+										<form class="m-uploadimg"  enctype="multipart/form-data">
 											<img src="../images/c_img.png" alt="" />
 											<input type="file" />
 											<a href="javascript:;">删除</a>
@@ -245,7 +245,7 @@
 								主体区域
 							</div>
 						</div>
-						<!--<div class="m-html-mod1">
+						<div class="m-html-mod1">
 							<div class="mn-header">
 								<a href="#" class="mn-logobox">
 									<img src="../images/mlogo.png" alt="" />
@@ -282,7 +282,7 @@
 							<div class="mn-htmlmain">
 								主体区域
 							</div>
-						</div>-->
+						</div>
 						
 					</div>
 				</div>
