--- a/plugin/webContent/groups/groups.html
+++ b/plugin/webContent/groups/groups.html
@@ -146,11 +146,11 @@
     }
 
 </style>
-<div class="ensure">
-    <span class="ensure_load saveActionComp">保存</span>
-    <span class="ensure_load generateSql">生成SQL</span>
+<!--<div class="ensure">-->
+    <!--<span class="ensure_load saveActionComp">保存</span>-->
+    <!--<span class="ensure_load generateSql">生成SQL</span>-->
 
-</div>
+<!--</div>-->
 <div class="fromInp" style="margin-top: 44px;">
     <label>步骤名称：</label>
     <input type="text" class="stepName"/>
