--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 		</form>
     <script src="plugin/jQuery/jquery.min.js"></script>
     <script src="plugin/zTree/jquery.ztree.all.min.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <!--<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>-->
     <script src="plugin/layer/layer.js"></script>
     <script src="plugin/basicContext/basicContext.min.js"></script>
     <script src="js/todo.js"></script>
