--- a/html/loglist.html
+++ b/html/loglist.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../plugin/font-awesome-4.7.0/css/font-awesome.css" />
     <link rel="stylesheet" href="../plugin/layui-v2.1.3/layui/css/layui.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
+    <link rel="stylesheet" href="../plugin/jquery-ui/jquery-ui.min.css">
+    <!--<link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">-->
     <link rel="stylesheet" href="../css/form.css" />
     <!--[if lt IE 9]>
       <script src="../common/html5shiv.min.js"></script>
