--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -110,7 +110,7 @@
 										<form class="m-uploadimg"  enctype="multipart/form-data">
 											<img src="../images/c_img.png" alt="" />
 											<input type="file" />
-											<a href="javascript:;">删除</a>
+											<a href="javascript:;" id="del-uploadimg-btn">删除</a>
 											<a href="javascript:;">点击上传</a>
 											<p>图片的尺寸为640*640，大小不超过1M</p>
 										</form>
