--- a/editBI.html
+++ b/editBI.html
@@ -9,8 +9,9 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="plugin/font-awesome-4.7.0/css/font-awesome.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
+    <link rel="stylesheet" href="plugin/jquery-ui/jquery-ui.min.css">
+    <!--<link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">-->
+	  <link rel="stylesheet" href="plugin/jquery-ui/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="plugin/basicContext/basicContext.min.css" />
     <link rel="stylesheet" href="plugin/context/context.standalone.css" />
     <link rel="stylesheet" href="plugin/layer/skin/default/layer.css" />
